# ExtendedCell

build-spreadsheet-Desktop_GCC-Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  qtcsettings.cmake
build-spreadsheet-Desktop_GCC-Debug/.cmake/api/v1/reply/: cache-v2-277e15967b26357b2597.json  cmakeFiles-v1-a85aa27c1bc3cd582ef0.json  codemodel-v2-e5105005990842a4f03d.json  directory-.-Debug-d55a24db07a87b771031.json  directory-ANTLR4.antlr4_runtime-Debug-b4c452e712635a4a4cf5.json  directory-ANTLR4.antlr4_runtime.runtime-Debug-e72162f881e3ed7477ec.json  index-2022-10-26T12-20-11-0848.json  target-antlr4_shared-Debug-bf9abd1357b06d22a3a5.json  target-antlr4_static-Debug-a9d7265a0eb53e461f57.json  target-make_lib_output_dir-Debug-31ddfcbd89a66566c280.json  target-spreadsheet-Debug-22d16a612e8abe2fa5db.json  target-utf8cpp-Debug-c4f9e49f17e3b153578d.json  target-utf8cpp-build-Debug-4b693c3de347f6fba534.json
build-spreadsheet-Desktop_GCC-Debug/ANTLR4/antlr4_runtime/: Makefile  cmake_install.cmake
build-spreadsheet-Desktop_GCC-Debug/ANTLR4/antlr4_runtime/runtime/: Makefile  cmake_install.cmake
build-spreadsheet-Desktop_GCC-Debug/ANTLR4/antlr4_runtime/runtime/utf8cpp-prefix/src/utf8cpp-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-spreadsheet-Desktop_GCC-Debug/ANTLR4/antlr4_runtime/runtime/utf8cpp-prefix/src/utf8cpp-stamp/: utf8cpp-gitclone-lastrun.txt
build-spreadsheet-Desktop_GCC-Debug/ANTLR4/antlr4_runtime/runtime/utf8cpp-prefix/tmp/: utf8cpp-cfgcmd.txt  utf8cpp-gitclone.cmake  utf8cpp-gitupdate.cmake  utf8cpp-mkdirs.cmake
build-spreadsheet-Desktop_GCC-Debug/antlr4cpp_generated_src/Formula/: FormulaBaseListener.cpp  FormulaBaseListener.h  FormulaLexer.cpp  FormulaLexer.h  FormulaListener.cpp  FormulaListener.h  FormulaParser.cpp  FormulaParser.h
inc/: cell.h
spreadsheet/: CMakeLists.txt  Formula.g4  main.cpp
spreadsheet/inc/: FormulaAST.h  common.h  formula.h  sheet.h
spreadsheet/src/: cell.cpp
spreadsheet/test/: tests.h
src/: FormulaAST.cpp  formula.cpp  sheet.cpp  structures.cpp
test/: test_runner_p.h  tests.cpp
